# Ivane120585

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SCROLL_LICENSE.txt  ScrollInvitation.md  api.py  cli.py  pyproject.toml  run_scroll_file.py  scroll_watcher.py  scrollbuilders.json  setup.py  starter.scroll  streamlit_app.py
builder_monetization/: README.md  donation_widget.js  scroll_monetization_policy.md  scrollblessings_registry.json  storefront_template.astro
docs/: api_reference.md  examples.md  getting_started.md  index.md  scroll_language.md
lashon_alpha_protocol/: README.md  scroll_alpha_engine.py  scroll_alpha_reference.md  scroll_hebrew_commands.json  scroll_hebrew_template.scroll
launch/: devto_post.md  final_checklist.md  producthunt_blurb.md  reddit_intro.md  scrollbuilder_ranks.md  social_media_campaign.md  tweet_thread.md  vscode_publishing.md
scroll_executor_patch/: __init__.py  deploy_handler.py  gather_installer.py  scroll_executor_hook.py  scroll_file_writer.py  scroll_folder_generator.py
scroll_landing/: index.html  invite_list.csv
scroll_wrapped_codex/: codex_wrapper.py  lashon_compiler.py  scribe_codex.py  scroll_core.py  scroll_memory_context.json
scrollbuilder_onboarding/: discord_invite.md  invitation_scroll.md  invite_tracker.csv  rank_benefits.md  scrollbuilders.json
scrollcensus/: scroll_embassy_initializer.py  scrollambassador_assigner.py  scrollbuilder_batch_register.py  scrollcensus_form.json  scrollcensus_form_entries.json  scrollcensus_ui.py  scrollcity_grid_generator.py  scrollnation_map_updater.py  (+2 more)
(+62 files in other folders)
